@@ -259,16 +259,17 @@ replace restart {
 	ld	b, %2 (%3)
 } if notVolatile(%1), notUsed(%1)
 
-replace restart {
-	ld	%1,a
-	ld	%2,%3
-	ld	%4,%1
-} by {
-	; peephole 0t loaded %4 from a instead of going through %1.
-	ld	%1,a
-	ld	%2,%3
-	ld	%4,a
-} if notVolatile(%1), operandsNotRelated(%1 %3), operandsNotRelated(%1 %2)
+// Bug #2728445
+//replace restart {
+//	ld	%1,a
+//	ld	%2,%3
+//	ld	%4,%1
+//} by {
+//	; peephole 0t loaded %4 from a instead of going through %1.
+//	ld	%1,a
+//	ld	%2,%3
+//	ld	%4,a
+//} if notVolatile(%1), operandsNotRelated(%1 %3), operandsNotRelated(%1 %2)
 
 replace restart {
 	ld	%1,a
